test/app/gateway-api.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-one
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: default
      hostname: "*.gw.foo.org"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-two
  namespace: default
spec:
  gatewayClassName: cilium
  listeners:
    - name: default
      hostname: "*.gw.foo.org"
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myservicea
  namespace: default
spec:
  parentRefs:
    - name: gateway-one
  hostnames: ["myservicea.gw.foo.org"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myserviceb
  namespace: kube-system
spec:
  parentRefs:
    - name: gateway-one
      namespace: default
  hostnames: ["myserviceb.gw.foo.org"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myservicec
  namespace: kube-system
spec:
  parentRefs:
    - name: gatewayWrong
      namespace: default
  hostnames: ["myservicec.gw-wrong.foo.org"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: myserviced
  namespace: default
spec:
  parentRefs:
    - name: gateway-one
    - name: gateway-two
  hostnames: ["myserviced.gw.foo.org"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: myservicetls
  namespace: default
spec:
  parentRefs:
    - name: gateway-one
  hostnames: ["myservicetls.gw.foo.org"]
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: myservicegrpc
  namespace: default
spec:
  parentRefs:
    - name: gateway-one
  hostnames: ["myservicegrpc.gw.foo.org"]
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-wildcard
  namespace: default
spec:
  parentRefs:
    - name: gateway-one
  hostnames: ["*.http-wildcard.gw.foo.org"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tls-wildcard
  namespace: default
spec:
  parentRefs:
    - name: gateway-one
  hostnames: ["*.tls-wildcard.gw.foo.org"]
  rules:
    - backendRefs:
        - name: backend
          port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-wildcard
  namespace: default
spec:
  parentRefs:
    - name: gateway-one
  hostnames: ["*.grpc-wildcard.gw.foo.org"]
  rules:
    - backendRefs:
        - name: backend
          port: 80
