test/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - host: myservicea.foo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-test-b
  namespace: default
spec:
  ingressClassName: nginxinc
  rules:
    - host: myserviceb.foo.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservice-wildcard
  namespace: default
spec:
  ingressClassName: cilium
  rules:
    - host: "*.myservice.foo.org"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 80
---
# TODO: Should this be an ExternalName Service instead?
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-target
  namespace: default
  annotations:
    coredns.io/target: redirect.here.
spec:
  ingressClassName: cilium
  rules:
    - host: ingress.target.foo.org
