test/app/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization

resources:
  # Test application
  - ./backend.yml

  # Generating DNS records
  - ./service.yaml
  - ./ingress.yaml
  - ./gateway-api.yaml
  - ./virtual-server.yaml
